--- a/per_email/email_app/templates/email_app/list_subscriber.html
+++ b/per_email/email_app/templates/email_app/list_subscriber.html
@@ -11,6 +11,8 @@
         {% comment %} <th>Actions</th> {% endcomment %}
         <th>Update_Email</th>
         <th>Schedule_Email</th>
+        <th>History</th>
+        <th>ScheduleTime</th>
       </tr>
       {% for subs in subscribers %}
       <tr>
@@ -18,6 +20,8 @@
         <td>{{ subs.email }}</td>
         <td><a href="{% url 'mail_individual' subs.pk %}">Email</a></td>
         <td><a href="{% url 'schedule_individual' subs.pk %}">Schedule</a></td>
+        <td><a href="{% url 'email_history' subs.pk %}">History</a></td>
+        <td><a href="{% url 'next_email_history' subs.pk %}">NextScheduleTime</a></td>
         {% comment %} <td>{{ cust.phone }}</td> 
         <td> 
           {% comment %} <a href="{% url 'customer_detail' customer.pk %}">View</a> {% endcomment %}
