--- a/per_email/email_app/templates/email_app/next_email_history.html
+++ b/per_email/email_app/templates/email_app/next_email_history.html
@@ -1,13 +1,13 @@
 <h1>Email History for {{ subscriber.name }}</h1>
 
 <ul>
-    {% for entry in email_history_entries %}
+    {% for entry in email_history_list %}
         <li>
             <strong>mail:</strong> {{ subscriber.email}}<br>
-            <strong>Subject:</strong> {{ subscriber.subject }}<br>
-            <strong>Text:</strong> {{ subscriber.message_text }}<br>
+            <strong>Subject:</strong> {{ entry.subject }}<br>
+            <strong>Text:</strong> {{ entry.message_text }}<br>
             <strong>NextScheduleTime:</strong> {{ entry.schedule_time}}<br>
-            <strong>Gap:</strong> {{ entry.periodic_gap_day }}<br>
+            <strong>Gap:</strong> {{ entry.gap }}<br>
         </li>
     {% endfor %}
 </ul>
