--- a/per_email/email_app/templates/email_app/base.html
+++ b/per_email/email_app/templates/email_app/base.html
@@ -32,7 +32,9 @@
         </a>
         {% comment %} <a class="nav-item mx-2 nav-link text-light" href="#">Delete Item </a> {% endcomment %}
         <a class="nav-item mx-2 nav-link text-light" href ="{% url 'email_app:list_subscriber' %}">Subscriber List </a>
-       
+        <a class="nav-item mx-2 nav-link text-light" href ="{% url 'email_app:api_subscriber-list' %}">Subscriber API </a>
+        <a class="nav-item mx-2 nav-link text-light" href ="{% url 'email_app:past_history-list' %}">EmailHistory API </a>
+        <a class="nav-item mx-2 nav-link text-light" href ="{% url 'email_app:schedule_email-list' %}">Scheduled API </a>
         {% comment %} {% if user.is_authenticated%}
         <a href = "{% url "logout"%}" class ="nav-item mx-2 nav-link text-light"> Logout </a>
         <a href = "{% url "profile"%}" class ="nav-item mx-2 nav-link text-light"> Profile </a>
