first commit on this branch after applying a list of instruction

--- a/per_email/email_app/templates/email_app/next_email_history.html
+++ b/per_email/email_app/templates/email_app/next_email_history.html
@@ -10,7 +10,7 @@
             <strong>Subject:</strong> {{ entry.subject }}<br>
             <strong>Text:</strong> {{ entry.message_text }}<br>
             <strong>NextScheduleTime:</strong> {{ entry.schedule_time}}<br>
-            <strong>Gap:</strong> {{ entry.gap }}<br>
+            <strong>Gap:</strong> {{ entry.gp }}<br>
         </li>
     {% endfor %}
 </ul>
