--- a/per_email/email_app/templates/email_app/view_EmailPlusSchedule.html
+++ b/per_email/email_app/templates/email_app/view_EmailPlusSchedule.html
@@ -4,7 +4,7 @@
             <strong>Subject:</strong> {{EmailPlusScheduleobj.subject }}<br>
             <strong>Text:</strong> {{ EmailPlusScheduleobj.message_text }}<br>
             <strong>NextScheduleTime:</strong> {{EmailPlusScheduleobj.schedule_time}}<br>
-            <strong>Gap:</strong> {{EmailPlusScheduleobj.gap }}<br>
+            <strong>Gap:</strong> {{EmailPlusScheduleobj.gp }}<br>
             <strong>Rest Freq:</strong> {{EmailPlusScheduleobj.frequency }}<br>
 
 {% endblock %}
